# Python-Feeds

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  docker-compose.yml  generic.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
Model/: ComponentBase.py  ServiceBase.py
SeeThru_Feeds/Core/: ConfigParser.py  SeeThruFeed.py  SeeThru_Feed.py
SeeThru_Feeds/Core/Config/: ApiKey.py  Feed.py  Header.py  __init__.py
SeeThru_Feeds/Core/templates/: Manage_Template.py  Manage_Template.template  Script_Template.template  configHeader_Template.toml  configScript_Template.toml
SeeThru_Feeds/Model/: Attribution.py
SeeThru_Feeds/Model/Components/: ComponentBase.py
SeeThru_Feeds/Model/Feeds/: Feed.py
SeeThru_Feeds/Model/Properties/: Exceptions.py  Properties.py  PropertyManager.py
SeeThru_Feeds/Model/Scripts/: ScriptBase.py  ScriptResult.py
SeeThru_Feeds/feeds/: __init__.py  api_key.py  feed.py  feed_result.py
seethrufeeds/core/: config_parser.py  seethru_feed.py
seethrufeeds/core/config/: __init__.py  apikey.py  feed.py  header.py
seethrufeeds/core/exceptions/: config.py
seethrufeeds/core/templates/: Manage_Template.template
seethrufeeds/feeds/: __init__.py  exceptions.py  feed.py  feed_result.py
seethrufeeds/model/: attribution.py
seethrufeeds/model/Feeds/: feed.py
seethrufeeds/model/Properties/: properties.py  property_manager.py
seethrufeeds/model/Scripts/: script_base.py  (+2 more)
tests/: scripts.py  test_Core_ConfigParser.py  test_SeeThru_Feed.py
tests/feeds/: test_api_key.py  test_feed_result.py
(+11 files in other folders)
