[metadata]
name = SeeThru_Feeds
version = 0.2020.32.1
url = https://www.seethrunetworks.com/
author = SeeThru Networks 
author_email = SEETHRUEMAIL
description = This is the seethrunetworks open source feed creation project
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Website = https://www.seethrunetworks.com

[options]
python_requires = >=3
packages = find:
include_package_data = true
install_requires = 
    toml

[options.entry_points]
console_scripts =
    SeeThru_Feeds = SeeThru_Feeds.Core.SeeThruFeed:exec
    seethrufeeds = SeeThru_Feeds.Core.SeeThruFeed:exec
